SOC-1420 | Discussion editor - fix font bug on Safari

--- a/front/styles/main/component/_discussion-editor.scss
+++ b/front/styles/main/component/_discussion-editor.scss
@@ -67,6 +67,7 @@ $success-icon-size: 80px;
 		border: 0;
 		border-radius: 0;
 		margin: 0;
+		-webkit-font-smoothing: subpixel-antialiased;
 
 		&:focus {
 			border: 0;
